--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.6",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemon": "^1.18.9"
